# FindRoot

./: .gitignore  CMakeLists.txt  linear_solve.nb  linear_solve.wls  test_solution.wls
src/: find_root.H  main.cpp  math_utils.H  utils.H
src/details/: find_root_access_traits.H  find_root_math.H  find_root_math_det_inv.H
src/lib/: find_root.H  math.H  math_utils.H  newton.H  utils.H
tests/: performance.cpp  tests.cpp  tests_math.cpp  utils.H
